--- a/css/style.css
+++ b/css/style.css
@@ -311,18 +311,13 @@ main {
 }
 
 .accordion-item {
-    max-height: 0;
     overflow: hidden;
-    transition: max-height 0.5s ease;
+    transition: all 0.5s ease;
     padding-top: 1px;
     box-sizing: border-box;
 }
 
-.accordion-item.active {
-    max-height: 2000px;
-    /* 必要に応じて拡張 */
-    overflow-y: auto;
-}
+
 
 .accordion-item img {
     width: 100%;
